ApiHorario/crud-reticula-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crud-reticula
  labels:
    app: crud-reticula-frontend
    tier: crud-reticula
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 31000
    protocol: TCP
  selector:
    app: crud-reticula-frontend
    tier: crud-reticula
